# pulsecast

./: .env.example  .gitignore  ARCHITECTURE.md  CITATION.md  DECISIONS.md  Dockerfile  GEMINI.md  LICENSE  Makefile  PLAN.md  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  retrain.yml
data/: zone_routes.csv
data/ingest/: gtfs_rt_backfill.py  tlc.py
features/: calendar.py  demand.py
models/: baseline.py  export.py  lgbm.py  tft.py
notebooks/exploration/: 01_eda_phase0.ipynb
pulsecast/dashboard/: app.py
pulsecast/data/: schema.sql  stop_to_zone.csv
pulsecast/data/ingest/: bus_positions.py  bus_positions_backfill.py  gtfs_rt.py  gtfs_rt_backfill.py  nyc_events.py  subway_rt.py  tlc.py
pulsecast/features/: calendar.py  congestion.py  demand.py
pulsecast/models/: baseline.py  export.py  lgbm.py  tft.py
pulsecast/serving/: cache.py  features.py  main.py  schemas.py
scripts/: __init__.py  apply_schema.py  build_stop_zone_map.py  build_subway_zone_map.py  check_db_status.py  check_monthly_demand.py  initialize_routes.py  pipeline_config.py  plot_top_zones.py  run_export.py  run_features.py  run_train.py  update_disruption_flag.py
serving/: cache.py  main.py  schemas.py
tests/: test_api.py  test_bus_positions.py  test_bus_positions_backfill.py  test_cache.py  test_export.py  test_feature_vector.py  test_features.py  test_gtfs_rt_backfill.py  test_gtfs_rt_mapping.py  test_ingest_taxi_zones.py  test_pipelines.py  test_schemas.py  test_serving.py  test_subway_rt.py  test_tlc_ingest.py  test_update_disruption_flag.py
